[project]
name = "day5-snore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nicegui>=2.0.0",
    "pandas>=3.0.3",
    "pyserial>=3.5",
]

